--- a/tasks/neovim.yml
+++ b/tasks/neovim.yml
@@ -32,8 +32,7 @@
 #     - install
 #     - neovim
 - name: Install Vim-Plug
-  shell: sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
-                                              https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+  shell: sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
   tags:
     - install
     - dotfiles
