--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,5 +1,14 @@
+- name: Check if zshrc exists
+  stat:
+    path: "~/.zshrc"
+  register: zshrc_file_existance
+  tags:
+    - install
+    - dotfiles
+    - stow
 - name: Removing existing config files
   shell: rm ~/.zshrc
+  when: zshrc_file_existance.stat.exists
   tags:
     - install
     - dotfiles
@@ -22,6 +31,21 @@
     - install
     - dotfiles
     - stow
+
+- name: Write Git Config information username
+  shell: sed -i -e "s/{ user_name }/{{ user_name }}/g" ~/.dotfiles/git/.gitconfig
+  tags:
+    - install
+    - dotfiles
+    - stow
+
+- name: Write Git Config information email
+  shell: sed -i -e "s/{ user_email }/{{ user_email }}/g" ~/.dotfiles/git/.gitconfig
+  tags:
+    - install
+    - dotfiles
+    - stow
+
 - name: Stow dotfiles
   shell: cd $HOME/.dotfiles && ./ubuntu
   tags:
