--- a/tasks/neovim.yml
+++ b/tasks/neovim.yml
@@ -8,11 +8,6 @@
   tags:
     - install
     - neovim
-- name: Install vim
-  shell: add-apt-repository ppa:jonathonf/vim && apt-get install  -y vim
-  tags:
-    - install
-    - neovim
 - name: Install neovim
   shell: add-apt-repository ppa:neovim-ppa/unstable && apt-get install  -y neovim
   tags:
@@ -40,5 +35,5 @@
   shell: sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
   tags:
     - install
-    - dotfiles
     - neovim
+    - vim
