--- a/tasks/vim.yml
+++ b/tasks/vim.yml
@@ -1,5 +1,5 @@
 - name: Install vim
-  shell: add-apt-repository ppa:jonathonf/vim && apt-get install  -y vim
+  shell: sudo add-apt-repository ppa:jonathonf/vim && sudo apt-get install  -y vim
   tags:
     - install
     - vim
