--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -23,6 +23,7 @@
   ansible.builtin.git:
     repo: 'https://github.com/rdandnayak/.dotfiles.git'
     dest: "{{ lookup('env', 'HOME') }}/.dotfiles"
+    force: yes
     recursive: false
     update: yes
     accept_hostkey: yes
