fix: all fixes added related to user permission

--- a/tasks/node.yml
+++ b/tasks/node.yml
@@ -10,6 +10,11 @@
   tags:
     - node
 
+- name: Install node
+  shell: sudo apt install -y nodejs
+  tags:
+    - node
+
 
 # - name: Chnage n prefix
 #   shell: export N_PREFIX=$HOME/.n
