--- a/local.yml
+++ b/local.yml
@@ -13,7 +13,9 @@
     - name: Update Cache
       become: true
       apt:
+        force_apt_get: true
         update_cache: true
+        state: present
       tags:
         - node
         - zsh
