--- a/tasks/vim.yml
+++ b/tasks/vim.yml
@@ -3,3 +3,11 @@
   tags:
     - install
     - vim
+    - ubuntu
+- name: Install neovim
+  community.general.homebrew:
+    name: vim
+    state: present
+  tags:
+    - install
+    - neovim
