--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -36,7 +36,7 @@
     - macos
 - name: Change shell to zsh
   become: yes
-  shell: chsh -s `which zsh`
+  shell: sudo chsh -s `which zsh`
   tags:
     - zsh
 - name: Check if ohMyZsh exists
