fix: fix for ubuntu is done

--- a/tasks/vim.yml
+++ b/tasks/vim.yml
@@ -4,10 +4,11 @@
     - install
     - vim
     - ubuntu
-- name: Install neovim
+- name: Install vim
   community.general.homebrew:
     name: vim
     state: present
   tags:
     - install
+    - macos
     - neovim
