--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,7 @@ jobs:
   greet:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    options: 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,4 +30,4 @@ jobs:
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
     - name: Run ansible
-      run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
+      run: sudo ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
