--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,6 +5,9 @@ name: Manual workflow
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  push:
+    branches:
+    - main
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
@@ -22,7 +25,6 @@ jobs:
   greet:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    options: 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
