--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
     - name: Run ansible
-      run: sudo ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
+      run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
