--- a/tasks/npm-packages.yml
+++ b/tasks/npm-packages.yml
@@ -27,14 +27,14 @@
     - install
     - node
 # commenting for now since this has some weird error for permissions https://github.com/microsoft/WSL/issues/14
-# - name: Install npx
-#   become: yes
-#   npm:
-#     name: npx
-#     global: yes
-#   tags:
-#     - install
-#     - node
+- name: Install npx
+  become: yes
+  npm:
+    name: npx
+    global: yes
+  tags:
+    - install
+    - node
 
 - name: Conventional Changelog
   npm:
