--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -77,3 +77,8 @@
   when: not zsh_syntax.stat.exists
   tags:
     - zsh
+- name: Install ohmyzsh
+  shell: source $HOME/.zshrc
+  when: not oh_my_zsh_exists.stat.exists
+  tags:
+    - zsh
