--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -78,6 +78,8 @@
   tags:
     - zsh
 - name: Source zshrc file
-  shell: source $HOME/.zshrc
+  shell: source ~/.zshrc
+  args:
+    executable: /bin/bash
   tags:
     - zsh
