--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Run ansible
       run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
 
-  ubuntu:
+  macos:
     # The type of runner that the job will run on
     runs-on: macos-latest
 
