--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -78,6 +78,19 @@
   tags:
     - zsh
 
+- name: Path output before zsh
+  shell: echo $PATH
+  args:
+    executable: /bin/zsh
+  register: path_output_before_zsh
+  tags:
+    - zsh
+    - ubuntu
+
+
+- debug:
+    var: path_output_before_zsh.stdout_lines
+
 - name: Source zshrc file
   shell: source ~/.zshrc
   args:
@@ -93,3 +106,16 @@
   tags:
     - zsh
     - macos
+
+- name: Path Output after zsh
+  shell: echo $PATH
+  args:
+    executable: /bin/zsh
+  register: path_output_after_zsh
+  tags:
+    - zsh
+    - ubuntu
+
+
+- debug:
+    var: path_output_after_zsh.stdout_lines
