fix: removed n from bin

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Remove pre-installed node
-      run: sudo apt-get remove nodejs && sudo apt-get remove npm && sudo rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm
+      run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm && sudo rm -rf /usr/local/bin/n
     - name: Run ansible
       run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
 
