--- a/tasks/node.yml
+++ b/tasks/node.yml
@@ -67,10 +67,8 @@
     mode: '0755'
 
 
-- include: tasks/source.yml
-
 - name: Set global config prefix
-  shell: npm config set prefix $NPM_CONFIG_PREFIX
+  shell: source ~/.zshrc && npm config set prefix $NPM_CONFIG_PREFIX
   args:
     executable: /bin/zsh
   tags:
