--- a/tasks/source.yml
+++ b/tasks/source.yml
@@ -1,6 +1,7 @@
 - name: Source zshrc file
-  shell: source ~/.zshrc
-  args:
-    executable: /bin/zsh
+  ansible.builtin.shell: source ~/.zshrc
+  # shell: source ~/.zshrc
+  # args:
+  #   executable: /bin/zsh
   tags:
     - zsh
