fix: ubuntu issues resolved

--- a/local.yml
+++ b/local.yml
@@ -1,4 +1,6 @@
 - hosts: localhost
+  become: false
+  become_user: "{{ lookup('env', 'USER') }}"
   vars:
     # source_key: "./.ssh/id_rsa"
     dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
