--- a/tasks/npm-packages.yml
+++ b/tasks/npm-packages.yml
@@ -7,13 +7,15 @@
   tags:
     - install
     - node
-# - name: Install Yarn
-#   npm:
-#     name: yarn
-#     global: yes
-#   tags:
-#     - install
-#     - node
+- name: Install Yarn
+  args:
+    executable: $HOME/n/bin/npm
+  npm:
+    name: yarn
+    global: yes
+  tags:
+    - install
+    - node
 # - name: Install eslint
 #   npm:
 #     name: eslint
@@ -29,16 +31,16 @@
 #     - install
 #     - node
 #
-- name: Install angular cli
-  npm:
-    name: "@angular/cli"
-    global: yes
-    ignore_scripts: true
-  args:
-    executable: $HOME/n/bin
-  tags:
-    - install
-    - node
+# - name: Install angular cli
+#   npm:
+#     name: "@angular/cli"
+#     global: yes
+#     ignore_scripts: true
+#   args:
+#     executable: $HOME/n/bin/npm
+#   tags:
+#     - install
+#     - node
 #       # FIXME: commenting for now since this has some weird error for permissions https://github.com/microsoft/WSL/issues/14
 #       # FIXME: similar prblem exists for mac as well
 # # - name: Install npx
