fix: wsl also added

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,22 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
+  wsl:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Runs a single command using the runners shell
+    - shell: wsl-bash_Ubuntu-20.04 {0}
+      run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm && sudo rm -rf /usr/local/bin/n
+    - name: Install ansible
+      run: apt-get install ansible
+    - shell: wsl-bash_Ubuntu-20.04 {0}
+      run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
+
   ubuntu:
+    needs: wsl
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
 
