--- a/tasks/npm-packages.yml
+++ b/tasks/npm-packages.yml
@@ -1,7 +1,7 @@
 - name: Install global node packages
   become: false
   become_user: "{{ lookup('env', 'USER') }}"
-  shell: source ~/.zshrc && npm i -g typescript eslint typescript-language-server conventional-changelog-cli ts-node npx
+  shell: source ~/.zshrc && npm i -g typescript eslint typescript-language-server conventional-changelog-cli ts-node
   args:
     executable: /bin/zsh
   tags:
